add a 'logger' do some cleanup change some settings around
